fix footer and body width alignment

--- a/lms/static/sass/_gymnasium.scss
+++ b/lms/static/sass/_gymnasium.scss
@@ -364,6 +364,15 @@ body.register,
 	min-width:0px !important;
 }
 
+body,
+body.view-in-course
+{
+  div.window-wrap
+  {
+    min-width:inherit;
+  }
+}
+
 #primary-nav, #secondary-nav, .wrapper-footer
 {
 	.container,
